# FFTW_correlation

./: CMakeLists.txt  README.md  main.cpp
sampledData/: sampled_correlation.txt  sampled_random_function.txt
sampledData/plot_correlations/: drawDistAndHeatMap.py
sampledData/plot_sampled_random_function/: distCheck.py
